Small library fix

--- a/BlockchainAuction/Code/JavaApplication11/nbproject/project.properties
+++ b/BlockchainAuction/Code/JavaApplication11/nbproject/project.properties
@@ -33,12 +33,12 @@ dist.jar=${dist.dir}/blockchainauction.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.json-20180813.jar=src\\json-20180813.jar
+file.reference.json-20180813.jar=src/json-20180813.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.json-20180813.jar}:\
-    ${libs.MyLibrary.classpath}
+    ${file.reference.json-20180813.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -64,6 +64,7 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
+javadoc.reference.json-20180813.jar=src/gson-2.8.5.jar
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
